[package]
name = "zkinterface_bellman"
version = "1.1.3"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
edition = "2018"

[lib]
name = "zkinterface_bellman"
path = "src/lib.rs"

[[bin]]
name = "zkif_bellman"
path = "src/bin.rs"

[features]
zokrates = ["num-bigint"]

[dependencies]
ff = { git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }
pairing = { git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" } # "0.14.2"
bellman = { git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" } # "0.1.0"
sapling-crypto = { git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }

zkinterface = "1.1.3"

rand = "0.4"
num-bigint = { version = "0.2.2", optional = true}
