[package]
name = "zkinterface_bellman"
version = "1.1.4"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
license = "MIT"
edition = "2018"
description = "Bellman circuit construction and proving system for zkInterface"
homepage = "https://github.com/QED-it/zkinterface-bellman"
repository = "https://github.com/QED-it/zkinterface-bellman"
keywords = ["zero-knowledge", "zkproof", "cryptography"]

[lib]
name = "zkinterface_bellman"
path = "src/lib.rs"

[[bin]]
name = "zkif_bellman"
path = "src/bin.rs"

[features]
zokrates = ["num-bigint"]

[dependencies]
ff = { version = "0.4.0", git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }
pairing = { version = "0.14.2", git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }
bellman = { version = "0.1.0", git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }
sapling-crypto = { version = "0.0.1", git = "https://github.com/zcash/librustzcash", rev="d7ba3102948b1b144e24462dc36c37091dda6355" }

zkinterface = { version = "1.1.4" }
#zkinterface = { version = "1.1.4", path = "../zkinterface/rust" }

rand = "0.4"
num-bigint = { version = "0.2.2", optional = true}
